--- a/Dashboard/default/admin/portfolio.html
+++ b/Dashboard/default/admin/portfolio.html
@@ -8,7 +8,7 @@
 	<title>Card Coffer: Card Studio</title>
 	
 	<!-- Meta -->
-	<meta charset="UTF-8" />
+	<meta charset="UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimum-scale=1.0, maximum-scale=1.0">
 	<meta name="apple-mobile-web-app-capable" content="yes">
 	<meta name="apple-mobile-web-app-status-bar-style" content="black">
@@ -37,10 +37,9 @@
 <script src="../assets/components/plugins/less-js/less.min.js?v=v1.2.3"></script>
 <script src="../assets/components/modules/admin/charts/flot/assets/lib/excanvas.js?v=v1.2.3"></script>
 <script src="../assets/components/plugins/browser/ie/ie.prototype.polyfill.js?v=v1.2.3"></script>
-<link rel="icon" type="image/png" href="../assets/tab-Icon.png"/>   
-<script src="angular.js"></script>	
+<link rel="icon" type="image/png" href="../assets/tab-Icon.png"/>   	
 </head>
-<body ng-app="ccApp">
+<body ng-app="ccApp" ng-controller="userController">
 
 		<div class="navbar navbar-fixed-top navbar-primary main" role="navigation">
     
@@ -116,7 +115,7 @@
 
 
 
-<div id="content">
+<div id="content" ng-controller="userCardController">
 	<div class="heading-buttons bg-white border-bottom innerAll">
 		<h1 class="content-heading padding-none pull-left">Card Studio</h1>
 		<div class="clearfix"></div>
@@ -134,27 +133,27 @@
                             		  <form role="form">
 										<div class="form-group">
 										  <label for="email">Full Name:</label>
-										  <input type="text" class="form-control" style="color:black" placeholder="Alireza Saberi" ng-model="user.name">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.name">
 										</div>
 										<div class="form-group">
 										  <label for="email">Title:</label>
-										  <input type="text" class="form-control" style="color:black" placeholder="PhD in Computer Scince" ng-model="title">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.jobtitle">
 										</div>
 										<div class="form-group">
 										  <label for="email">Affiliation:</label>
-										  <input type="text" class="form-control" style="color:black" placeholder="McGill" ng-model="Affiliation">
+										  <input type="text" class="form-control" style="color:black" placeholder="McGill" ng-model="card.AliSabCard1.affiliation">
 										</div>
 										<div class="form-group">
 										  <label for="email">Phone Number:</label>
-										  <input type="text" class="form-control" style="color:black" placeholder="514 839 0936" ng-model="tel">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.phone">
 										</div>
 										<div class="form-group">
 										  <label for="email">Fax Number:</label>
-										  <input type="text" class="form-control" style="color:black" placeholder="514 839 0936" ng-model="fax">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.fax">
 										</div>
 										<div class="form-group">
 										  <label for="email">Email:</label>
-										  <input type="text" class="form-control" style="color:black" placeholder="ali@cardcoffer.com" ng-model="email">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.email">
 										</div>
 										</form>
                                 </div>
@@ -180,20 +179,24 @@
                              		  	<br>
 										<div class="form-group">
 										  &nbsp<i class="fa fa-twitter fa-2x"></i>
-										  <input type="text" class="form-control" style="color:black" placeholder="www.twitter.com" ng-model="tweeter">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.twitter">
 										</div>
 										<div class="form-group">
 										  &nbsp<i class="fa fa-linkedin fa-2x"></i>
-										  <input type="text" class="form-control" style="color:black" placeholder="www.linkedin.com" ng-model="linkedin">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.linkedin">
 										</div>
 										<div class="form-group">
 										  &nbsp<i class="fa fa-facebook fa-2x"></i>
-										  <input type="text" class="form-control" style="color:black" placeholder="www.facebook.com" ng-model="fb">
+										  <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.facebook">
 										</div>
-										<div class="form-group">
-										  &nbsp<i class="fa fa-pinterest fa-2x"></i>
-										  <input type="text" class="form-control" style="color:black" placeholder="www.pintrest.com" ng-model="pn">
-										</div>
+                                        <div class="form-group">
+                                          &nbsp<i class="fa fa-google-plus fa-2x"></i>
+                                          <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.googleplus">
+                                        </div>
+                                        <div class="form-group">
+                                          &nbsp<i class="fa fa-pinterest fa-2x"></i>
+                                          <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.pinterest">
+                                        </div>
 										</form>
                             </div>
                                     <div class="innerAll">
@@ -218,9 +221,9 @@
                                     <img src="../assets/images/people/ali.jpg" alt="" class="img-circle" style="width:200px;height:200px">
                                  </div>
                                 <div class="innerAll text-center">
-                                    <p class="lead strong margin-none">{{user.name}}</p><br>
-                                    <p>{{title}}</p>
-                                    <p>{{Affiliation}}</p>
+                                    <p class="lead strong margin-none">{{card.AliSabCard1.name}}</p><br>
+                                    <p>{{card.AliSabCard1.jobtitle}}</p>
+                                    <p>{{card.AliSabCard1.affiliation}}</p>
                                 </div>
                                 <div class="innerAll text-center">
                                     <button class="btn btn-default">
@@ -236,14 +239,14 @@
                     <div class="widget widget-inverse widget-scroll" data-scroll-height="165px">
                         <div class="widget-head">
                             <button class="btn btn-xs btn-default pull-right"><i class="fa fa-times"></i></button>
-                            <h4 class="heading">{{name}}</h4>
+                            <h4 class="heading">{{card.AliSabCard1.name}}</h4>
                         </div>
                         <div class="widget-body padding-none">
                             <div>
                                 <div class="box-generic border-none text-center">
-                                    <i class="fa fa-envelope-o fa-2x"></i></i>&nbsp {{email}}
+                                    <i class="fa fa-envelope-o fa-2x"></i></i>&nbsp {{card.AliSabCard1.email}}
                                     <br><br>
-                                    <i class="fa fa-phone fa-2x" style="text-align:justify"></i>&nbsp {{tel}}
+                                    <i class="fa fa-phone fa-2x" style="text-align:justify"></i>&nbsp {{card.AliSabCard1.phone}}
                                  <div class="innerAll bg-default">
                                     <img src="../assets/images/people/144x144.png">
                                  </div>
@@ -487,7 +490,7 @@
 	var themerPrimaryColor = primaryColor;
 	</script>
 	
-	<script src="../assets/components/library/bootstrap/js/bootstrap.min.js?v=v1.2.3"></script>
+<script src="../assets/components/library/bootstrap/js/bootstrap.min.js?v=v1.2.3"></script>
 <script src="../assets/components/plugins/nicescroll/jquery.nicescroll.min.js?v=v1.2.3"></script>
 <script src="../assets/components/plugins/breakpoints/breakpoints.js?v=v1.2.3"></script>
 <script src="../assets/components/core/js/animations.init.js?v=v1.2.3"></script>
@@ -499,6 +502,10 @@
 <script src="../assets/components/core/js/sidebar.main.init.js?v=v1.2.3"></script>
 <script src="../assets/components/core/js/sidebar.collapse.init.js?v=v1.2.3"></script>
 <script src="../assets/components/helpers/themer/assets/plugins/cookie/jquery.cookie.js?v=v1.2.3"></script>
-<script src="../assets/components/core/js/core.init.js?v=v1.2.3"></script>	
+<script src="../assets/components/core/js/core.init.js?v=v1.2.3"></script>
+<script src="../assets/scripts/angular.js"></script>
+<script src="app/ccApp.js"></script>
+<script src="app/controllers/_User.js"></script>
+<script src="app/controllers/_UserCardController.js"></script>
 </body>
 </html>
