--- a/Dashboard/default/admin/dashboard.html
+++ b/Dashboard/default/admin/dashboard.html
@@ -118,7 +118,7 @@
 						<div class="widget-body padding-none">
 							<div>
 								<div class="innerAll bg-inverse">
-									<p class="lead text-white strong margin-none"><i class="glyphicon glyphicon-refresh"></i><br/>4,340</p>
+									<p class="lead text-white strong margin-none"><i class="fa fa-refresh fa-spin"></i><br/>4,340</p>
 								</div>
 								<div class="innerAll">
 									<button class="btn btn-inverse">Exchanges</button>
