font-aswesome icon for promotions

--- a/Dashboard/default/admin/dashboard.html
+++ b/Dashboard/default/admin/dashboard.html
@@ -257,7 +257,7 @@
 						<div class="widget-body padding-none">
 							<div>
 								<div class="bg-info innerAll">
-									<p class="lead strong margin-none text-white"><i class="icon-envelope-2"></i><br/>4 Promotions</p>
+									<p class="lead strong margin-none text-white"><i class="fa fa-gift"></i><br/>4 Promotions</p>
 								</div>
 								<div class="innerAll">
 									<button class="btn btn-info">View Promotions</button>
