demographic icon is changed to glob

--- a/Dashboard/default/admin/dashboard.html
+++ b/Dashboard/default/admin/dashboard.html
@@ -497,7 +497,7 @@
 			
 			<div class="widget widget-inverse">
 				<div class="widget-head border-bottom-none">
-					<h4 class="heading"><i class="icon-wind-speed-censor fa fa-fw"></i> Demographics</h4>
+					<h4 class="heading"><i class="fa fa-globe"></i> Demographics</h4>
 				</div>
 				<div class="widget-body padding-none">
 					
