Address field is added

--- a/Dashboard/default/admin/portfolio.html
+++ b/Dashboard/default/admin/portfolio.html
@@ -201,6 +201,10 @@
                                           &nbsp<i class="fa fa-pinterest fa-2x"></i>
                                           <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.pinterest">
                                         </div>
+                                        <div class="form-group">
+                                          <i class="fa fa-home fa-2x"></i>&nbsp Address
+                                          <input type="text" class="form-control" style="color:black" ng-model="card.AliSabCard1.address">
+                                        </div>
 										</form>
                             </div>
                                     <div class="innerAll">
