google+ and Address are added to the back of the card

--- a/Dashboard/default/admin/portfolio.html
+++ b/Dashboard/default/admin/portfolio.html
@@ -232,6 +232,7 @@
                                     <p class="lead strong margin-none">{{card.AliSabCard1.name}}</p><br>
                                     <p>{{card.AliSabCard1.jobtitle}}</p>
                                     <p>{{card.AliSabCard1.affiliation}}</p>
+                                    <p><i class="fa fa-globe">&nbsp</i>{{card.AliSabCard1.webpage}}</p>
                                 </div>
                                 <div class="innerAll text-center">
                                     <button class="btn btn-default">
@@ -255,14 +256,19 @@
                                     <i class="fa fa-envelope-o fa-2x"></i></i>&nbsp {{card.AliSabCard1.email}}
                                     <br><br>
                                     <i class="fa fa-phone fa-2x" style="text-align:justify"></i>&nbsp {{card.AliSabCard1.phone}}
-                                 <div class="innerAll bg-default">
+                                    <br><br>
+                                    <i class="fa fa-fax fa-2x" style="text-align:justify"></i>&nbsp 514 888 0000
+                                    <br><br>
+                                    <i class="fa fa-globe fa-2x" style="text-align:justify"></i>&nbsp {{card.AliSabCard1.address}}
+                                    <br><br>
+                                 <!--div class="innerAll bg-default">
                                     <img src="../assets/images/people/144x144.png">
-                                 </div>
-                                 <br>
-                                    <dix>
+                                 </div-->
+                                <dix>
                                         <i class="fa fa-twitter fa-2x"></i> &nbsp
                                         <i class="fa fa-linkedin fa-2x"></i>&nbsp
                                         <i class="fa fa-facebook fa-2x"></i>&nbsp
+                                        <i class="fa fa-google-plus fa-2x"></i>&nbsp
                                         <i class="fa fa-pinterest fa-2x"></i>
                                 </div>
                             </div>
