--- a/Dashboard/default/admin/dashboard.html
+++ b/Dashboard/default/admin/dashboard.html
@@ -585,6 +585,7 @@
 <script src="../assets/components/core/js/core.init.js?v=v1.2.3"></script>
 <script src="../assets/scripts/angular.js"></script>
 <script src="app/ccApp.js"></script>
-<script src="app/controllers/_User.js"></script>	
+<script src="app/controllers/_User.js"></script>
+<script scr="app/controllers/userFactory"></script>
 </body>
 </html>
