temopary goodbye to factories

--- a/Dashboard/default/admin/dashboard.html
+++ b/Dashboard/default/admin/dashboard.html
@@ -586,6 +586,6 @@
 <script src="../assets/scripts/angular.js"></script>
 <script src="app/ccApp.js"></script>
 <script src="app/controllers/_User.js"></script>
-<script scr="app/controllers/userFactory"></script>
+<!--script scr="app/controllers/userFactory.js"></script-->
 </body>
 </html>
