--- a/Dashboard/default/admin/contacts.html
+++ b/Dashboard/default/admin/contacts.html
@@ -111,18 +111,18 @@
     	  	<div class="input-group-btn"><button class="btn btn-default" type="button"><i class="fa fa-search"></i></button></div>
     	 </div>
 	    <div class="innerAll spacing-x2">
-             <span class="label label-default">Reset</span>
-             <span class="label label-primary">Name</span>
-             <span class="label label-success">Job Title</span>
-             <span class="label label-info">Affiliation</span>
-             <span class="label label-warning">Email</span>
-             <span class="label label-danger">Phone</span>
-             <span class="label label-success">Fax</span>
-             <span class="label label-info">Note</span>
+             <span class="label label-default" ng-click="doSort(null)">Reset</span>
+             <span class="label label-primary" ng-click="doSort('name')">Name</span>
+             <span class="label label-success" ng-click="doSort('jobtitle')">Job Title</span>
+             <span class="label label-info" ng-click="doSort('affiliation')">Affiliation</span>
+             <span class="label label-warning" ng-click="doSort('email')">Email</span>
+             <span class="label label-danger" ng-click="doSort('phone')">Phone</span>
+             <span class="label label-success" ng-click="doSort('fax')">Fax</span>
+             <span class="label label-info" ng-click="doSort('note')">Note</span>
         </div>
         <div class="innerAll spacing-x2">     
         <div class="row">
-        <div class="col-md-4 col-sm-6" ng-repeat="con in contacts|filter:cardFilter">
+        <div class="col-md-4 col-sm-6" ng-repeat="con in contacts|filter:cardFilter| orderBy:sortBy:reverse">
 
             <div class="panel-3d">
                 <div class="front">
